fixed with issue on mobile

--- a/meet-landing-page/src/output.css
+++ b/meet-landing-page/src/output.css
@@ -227,6 +227,9 @@
   .min-h-screen {
     min-height: 100vh;
   }
+  .w-1\/2 {
+    width: calc(1/2 * 100%);
+  }
   .w-16 {
     width: calc(var(--spacing) * 16);
   }
@@ -242,9 +245,6 @@
   .w-\[350px\] {
     width: 350px;
   }
-  .w-\[375px\] {
-    width: 375px;
-  }
   .w-full {
     width: 100%;
   }
@@ -253,6 +253,9 @@
   }
   .max-w-\[250px\] {
     max-width: 250px;
+  }
+  .max-w-\[300px\] {
+    max-width: 300px;
   }
   .max-w-full {
     max-width: 100%;
@@ -309,8 +312,14 @@
   .bg-cover {
     background-size: cover;
   }
+  .object-contain {
+    object-fit: contain;
+  }
   .p-0 {
     padding: calc(var(--spacing) * 0);
+  }
+  .px-4 {
+    padding-inline: calc(var(--spacing) * 4);
   }
   .px-6 {
     padding-inline: calc(var(--spacing) * 6);
